--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "puppy-trainer",
   "version": "1.0.0",
   "scripts": {
-    "start": "parcel src/index.html"
+    "start": "parcel src/index.html",
+    "build": "rm -r dist/ && parcel build src/index.html"
   },
   "dependencies": {
     "parcel": "^2.9.3",
-    "encoding-japanese": "^2.0.0",
-    "lodash": "^4.17.21"
+    "encoding-japanese": "^2.0.0"
   },
   "browserslist": [
     "last 2 versions"
