--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "build": "rm -r dist/ && parcel build src/index.html"
   },
   "dependencies": {
-    "parcel": "^2.9.3",
     "encoding-japanese": "^2.0.0"
+  },
+  "devDependencies": {
+    "parcel": "^2.9.3"
   },
   "browserslist": [
     "last 2 versions"
